--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -675,13 +675,13 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="x2k-svg"
                                                  width="100%"
                                                  height="100%" viewBox="-20 0 1020 600">
-                                                <g class="zoom-controls" transform="translate(10, 10)">
-                                                    <g id="zoom-in" transform="translate(0, 0)">
+                                                <g class="zoom-controls x2k-zoom-controls" transform="translate(10, 10)">
+                                                    <g id="x2k-zoom-in" transform="translate(0, 0)">
                                                         <rect width="20" height="20"></rect>
                                                         <line x1="5" y1="10" x2="15" y2="10"></line>
                                                         <line x1="10" y1="5" x2="10" y2="15"></line>
                                                     </g>
-                                                    <g id="zoom-out" transform="translate(0, 20)">
+                                                    <g id="x2k-zoom-out" transform="translate(0, 20)">
                                                         <rect width="20" height="20"></rect>
                                                         <line x1="5" y1="10" x2="15" y2="10"></line>
                                                     </g>
@@ -785,6 +785,17 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="g2n-svg"
                                                  width="100%"
                                                  height="100%" viewBox="-20 0 1020 600">
+                                                <g class="zoom-controls g2n-zoom-controls" transform="translate(10, 10)">
+                                                    <g id="g2n-zoom-in" transform="translate(0, 0)">
+                                                        <rect width="20" height="20"></rect>
+                                                        <line x1="5" y1="10" x2="15" y2="10"></line>
+                                                        <line x1="10" y1="5" x2="10" y2="15"></line>
+                                                    </g>
+                                                    <g id="g2n-zoom-out" transform="translate(0, 20)">
+                                                        <rect width="20" height="20"></rect>
+                                                        <line x1="5" y1="10" x2="15" y2="10"></line>
+                                                    </g>
+                                                </g>
                                             </svg>
                                         </div>
                                     </div>
