Updated nav link color

--- a/src/main/webapp/css/index_beta.css
+++ b/src/main/webapp/css/index_beta.css
@@ -51,6 +51,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a.nav-link {
+    color: #3e8cd6;
+}
+
 #example-link {
     font-size: 0.8rem;	
 }
